core/dbo-mariadb/v1_Service_mariadb-operator-webhook-metrics.yaml
# Source: mariadb-operator/templates/webhook-servicemonitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-operator-webhook-metrics
  labels:
    
    helm.sh/chart: mariadb-operator-0.14.0
    app.kubernetes.io/name: mariadb-operator-webhook
    app.kubernetes.io/instance: mariadb-operator
    
    app.kubernetes.io/version: "v0.0.14"
    
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: metrics
  selector:
    
    app.kubernetes.io/name: mariadb-operator-webhook
    app.kubernetes.io/instance: mariadb-operator
